docs added - html,yaml,md,postman collection
